--- a/fester.html
+++ b/fester.html
@@ -111,22 +111,20 @@
         <div class="collapsible-content">
           <p class="party-highlight-description">
             In einer emotional aufgeladenen Bundestagsrede im März 2022 forderte
-            Emilia Fester mit erhobener Stimme eine allgemeine Impfpflicht.
+            Emilia Fester mit erhobener Stimme eine <b>allgemeine Impfpflicht</b>.
             Dabei behauptete sie, sie habe „ihre ganze Jugend geopfert“ und sei
-            während der Pandemie nicht einmal verreist – eine Aussage, die
-            später als unwahr entlarvt wurde, da sie selbst Urlaubsbilder
-            postete.
-          </p>
-
-          <p class="party-highlight-description">
+            während der Pandemie nicht einmal verreist – eine Aussage, die später als
+            <b>unwahr</b> entlarvt wurde, da sie selbst <mark>Urlaubsbilder</mark> postete.
+        </p>
+        
+        <p class="party-highlight-description">
             Ihre Rede war geprägt von übertriebener Theatralik, persönlichen
             Anschuldigungen und wenig faktenbasierten Argumenten. Statt
-            sachlicher Auseinandersetzung setzte sie auf moralische
-            Überlegenheit und pauschale Schuldzuweisungen. Besonders
-            problematisch war ihr Vorwurf, Ungeimpfte seien egoistisch und
-            würden bewusst Leben gefährden – eine Behauptung, die
-            wissenschaftlich nicht haltbar war.
-          </p>
+            sachlicher Auseinandersetzung setzte sie auf <b>moralische Überlegenheit</b>
+            und pauschale Schuldzuweisungen. Besonders problematisch war ihr Vorwurf,
+            Ungeimpfte seien <b>egoistisch</b> und würden bewusst Leben gefährden –
+            eine Behauptung, die wissenschaftlich nicht haltbar war.
+        </p>        
 
           <div class="video-container">
             <iframe
@@ -187,22 +185,22 @@
           <p class="party-highlight-description">
             In einem Interview im Jahr 2021 überraschte Emilia Fester mit einer
             radikalen Forderung: Das Wahlalter solle nicht nur auf 16 oder 14
-            Jahre gesenkt werden – sondern sogar auf 2 Jahre. Ihre Begründung:
+            Jahre gesenkt werden – sondern sogar auf <b>2 Jahre</b>. Ihre Begründung:
             Auch Kleinkinder seien von politischen Entscheidungen betroffen und
             sollten deshalb mitbestimmen dürfen. Ein Vorschlag, der zeigt, dass
             in der Politik nicht jeder Vorschlag durchdacht sein muss.
-          </p>
-
-          <p class="party-highlight-description">
+        </p>
+        
+        <p class="party-highlight-description">
             Diese Aussage sorgte für breite Kritik, da Zweijährige weder lesen,
             schreiben noch politische Zusammenhänge verstehen können.
             Politikwissenschaftler, Medien und Oppositionspolitiker bezeichneten
-            den Vorschlag als realitätsfern und populistisch, da Eltern in einem
-            solchen Modell faktisch die Wahlentscheidung für ihre Kleinkinder
-            treffen würden. Kritiker warfen Fester vor, dass sie mit dieser
-            Forderung nicht ernsthaft Politik gestalten, sondern lediglich
-            mediale Aufmerksamkeit erzeugen wollte.
-          </p>
+            den Vorschlag als <mark>realitätsfern</mark> und <b>populistisch</b>, da
+            Eltern in einem solchen Modell faktisch die Wahlentscheidung für ihre
+            Kleinkinder treffen würden. Kritiker warfen Fester vor, dass sie mit dieser
+            Forderung nicht ernsthaft Politik gestalten, sondern lediglich mediale
+            Aufmerksamkeit erzeugen wollte.
+        </p>        
 
           <div class="video-container">
             <iframe
