--- a/ganserer.html
+++ b/ganserer.html
@@ -126,17 +126,17 @@
           <p class="party-highlight-description">
             Tessa Ganserer sorgte im Februar 2023 mit ihrem Outfit in einer
             Ausschusssitzung des Bundestags für Aufregung. Sie erschien in einem
-            transparenten Top, das viel Haut und ihren BH sichtbar machte. Dies
-            führte zu Empörung bei Politikerinnen anderer Parteien, die das als
+            <b>transparenten Top</b>, das viel Haut und ihren <b>BH</b> sichtbar machte.
+            Dies führte zu Empörung bei Politikerinnen anderer Parteien, die das als
             unangemessen für eine Sitzung des Deutschen Bundestages empfanden.
-          </p>
-          <p class="party-highlight-description">
-            Besonders Kristina Schröder (CDU) äußerte ihren Unmut und betonte,
-            dass keine ihrer ehemaligen Kolleginnen so in einer Sitzung
-            erschienen wäre. Dieser Vorfall lenkte die Aufmerksamkeit eher auf
-            das Outfit als auf die politische Diskussion, in der es um das
-            Selbstbestimmungsgesetz für Trans-Personen ging.
-          </p>
+        </p>
+        <p class="party-highlight-description">
+            Besonders <b>Kristina Schröder (CDU)</b> äußerte ihren Unmut und betonte,
+            dass keine ihrer ehemaligen Kolleginnen so in einer Sitzung erschienen
+            wäre. Dieser Vorfall lenkte die Aufmerksamkeit eher auf das Outfit als auf
+            die politische Diskussion, in der es um das <b>Selbstbestimmungsgesetz</b>
+            für Trans-Personen ging.
+        </p>        
 
           <div class="video-container">
             <iframe
