--- a/goering-eckardt.html
+++ b/goering-eckardt.html
@@ -126,20 +126,20 @@
         <div class="collapsible-content">
           <p class="party-highlight-description">
             Katrin Göring-Eckardt sorgte im Januar 2025 für Aufsehen mit ihrer
-            Äußerung zur Migrationsdebatte, in der sie Integration als
+            Äußerung zur Migrationsdebatte, in der sie <b>Integration</b> als
             nebensächlich darstellte und den Zusammenhang zwischen Migration und
             den wirklichen Alltagsproblemen der Bevölkerung in Frage stellte.
-            Sie behauptete, Themen wie Integration seien nicht das
+            Sie behauptete, Themen wie <b>Integration</b> seien nicht das
             „Hauptproblem“ des Landes.
-          </p>
-          <p class="party-highlight-description">
+        </p>
+        <p class="party-highlight-description">
             Ihre Worte stießen auf breite Kritik, insbesondere von Politikern,
-            Fachverbänden und Experten, die die Aussagen als realitätsfern und
-            spaltend empfanden. Migration und Integration bleiben für viele
-            Deutsche ein zentrales gesellschaftliches Thema, und die Bemerkung
-            wurde als Verharmlosung der tatsächlichen Herausforderungen
-            wahrgenommen.
-          </p>
+            Fachverbänden und Experten, die die Aussagen als <b>realitätsfern</b>
+            und <b>spaltend</b> empfanden. <b>Migration</b> und <b>Integration</b>
+            bleiben für viele Deutsche ein zentrales gesellschaftliches Thema,
+            und die Bemerkung wurde als Verharmlosung der tatsächlichen
+            Herausforderungen wahrgenommen.
+        </p>        
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Januar 2025
@@ -156,7 +156,7 @@
           <div class="party-highlight-hashtags">
             <span class="hashtag">#migration</span>
             <span class="hashtag">#integration</span>
-            <a href="gruene.html">#grüne</a>
+            <a href="gruene.html">#gruene</a>
           </div>
         </div>
       </div>
@@ -183,27 +183,26 @@
         <div class="collapsible-content">
           <p class="party-highlight-description">
             Im Juni 2024 sorgte die Entscheidung von Katrin Göring-Eckardt, ein
-            Ordnungsgeld gegen Beatrix von Storch zu verhängen, für Aufsehen.
-            Von Storch hatte die Grüne Abgeordnete Tessa Ganserer wiederholt als
+            Ordnungsgeld gegen <b>Beatrix von Storch</b> zu verhängen, für Aufsehen.
+            Von Storch hatte die Grüne Abgeordnete <b>Tessa Ganserer</b> wiederholt als
             „biologisch und juristisch ein Mann“ bezeichnet und sie mit dem
             männlichen Titel „Herr Ganserer“ angesprochen.
-          </p>
-          <p class="party-highlight-description">
-            Göring-Eckardt, in ihrer Funktion als Bundestagsvizepräsidentin,
+        </p>
+        <p class="party-highlight-description">
+            Göring-Eckardt, in ihrer Funktion als <b>Bundestagsvizepräsidentin</b>,
             verhängte daraufhin das Ordnungsgeld, obwohl von Storch keine klaren
             Verstöße gegen die parlamentarische Ordnung begangen hatte. Viele
             kritisierten, dass Göring-Eckardt das Ordnungsgeld eher aus
             innerparteilicher Solidarität zu Ganserer und politischen Erwägungen
             gegen von Storch verhängte, anstatt eine objektive Entscheidung zu
             treffen.
-          </p>
-          <p class="party-highlight-description">
-            Der Vorfall wurde von vielen als Missbrauch der
-            Vizepräsidenten-Rolle wahrgenommen. Göring-Eckardt stellte ihre
-            Machtposition in den Dienst einer parteiinternen Auseinandersetzung
-            und setzte ihre politische Nähe zu Ganserer über eine unparteiische
-            Haltung.
-          </p>
+        </p>
+        <p class="party-highlight-description">
+            Der Vorfall wurde von vielen als <b>Missbrauch der Vizepräsidenten-Rolle</b>
+            wahrgenommen. Göring-Eckardt stellte ihre Machtposition in den Dienst einer
+            parteiinternen Auseinandersetzung und setzte ihre politische Nähe zu Ganserer
+            über eine unparteiische Haltung.
+        </p>        
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Juni 2024
@@ -224,7 +223,7 @@
             <span class="hashtag">#selbstbestimmungsgesetz</span>
             <span class="hashtag">#ganserer</span>
             <span class="hashtag">#von-storch</span>
-            <a href="gruene.html">#grüne</a>
+            <a href="gruene.html">#gruene</a>
           </div>
         </div>
       </div>
