--- a/spd.html
+++ b/spd.html
@@ -129,27 +129,29 @@
         <!-- Zusammenklappbarer Inhalt -->
         <div class="collapsible-content">
           <p class="party-highlight-description">
-            Im April 2022 stimmte die PSD gemeinsam mit den Grünen im Bundestag
-            für eine allgemeine Impfpflicht gegen COVID-19. Diese Entscheidung
-            stieß auf massive Ablehnung und führte zu landesweiten Protesten, da
-            viele Menschen die Zwangsmaßnahme als einen direkten Angriff auf
-            ihre persönlichen Freiheiten und ihr Recht auf körperliche
-            Unversehrtheit sahen.
+            Im April 2022 stimmte die <a href="spd.html">SPD</a> gemeinsam mit
+            den <a href="gruene.html">Grünen</a> im Bundestag für eine
+            allgemeine Impfpflicht gegen COVID-19. Diese Entscheidung stieß auf
+            massive Ablehnung und führte zu landesweiten Protesten, da viele
+            Menschen die Zwangsmaßnahme als einen direkten Angriff auf ihre
+            persönlichen Freiheiten und ihr Recht auf körperliche Unversehrtheit
+            sahen.
           </p>
           <p class="party-highlight-description">
-            Unter anderem stimmten die folgenden SPD-Abgeordneten für die
-            Impfpflicht: <a href="esken.html">Esken</a>, Heil,
+            Unter anderem stimmten die folgenden
+            <a href="spd.html">SPD</a>-Abgeordneten für die Impfpflicht:
+            <a href="esken.html">Esken</a>, Heil,
             <a href="klingbeil.html">Klingbeil</a>, Kühnert, Lauterbach und
             <a href="scholz.html">Scholz</a>.
           </p>
           <p class="party-highlight-description">
-            Kritiker warfen der SPD vor, das fundamentale Recht jedes Einzelnen
-            auf körperliche Unversehrtheit zu ignorieren. Der Staat hat nicht
-            das Recht, den Bürgern vorzuschreiben, was sie mit ihrem Körper
-            anstellen. Die Entscheidung, eine Impfpflicht durchzusetzen, wäre
-            ein schwerwiegender Eingriff in die persönliche Freiheit und die
-            Selbstbestimmung der Menschen gewesen und hätte die Gesellschaft
-            weiter gespalten.
+            Kritiker warfen der <a href="spd.html">SPD</a> vor, das fundamentale
+            Recht jedes Einzelnen auf körperliche Unversehrtheit zu ignorieren.
+            Der Staat hat nicht das Recht, den Bürgern vorzuschreiben, was sie
+            mit ihrem Körper anstellen. Die Entscheidung, eine Impfpflicht
+            durchzusetzen, wäre ein schwerwiegender Eingriff in die persönliche
+            Freiheit und die Selbstbestimmung der Menschen gewesen und hätte die
+            Gesellschaft weiter gespalten.
           </p>
           <p class="party-highlight-description">
             Zudem war der Nutzen der sogenannten "Impfung" fragwürdig. Viele
@@ -161,9 +163,58 @@
           </p>
           <p class="party-highlight-description">
             Das Gesetz zur Impfpflicht konnte nur durch die starke Ablehnung aus
-            anderen Parteien verhindert werden: Die CDU/CSU, die FDP und die
-            Linke stimmten größtenteils gegen das Gesetz. Die AfD war die
-            einzige Partei, die geschlossen ohne Ausnahme gegen die Impfpflicht
+            anderen Parteien verhindert werden: Die
+            <a href="cducsu.html">CDU/CSU</a>, die
+            <a href="fdp.html">FDP</a> und die
+            <a href="linke.html">Linke</a> stimmten größtenteils gegen das
+            Gesetz. Die <a href="afd.html">AfD</a> war die einzige Partei, die
+            geschlossen ohne Ausnahme gegen die Impfpflicht stimmte.
+          </p>
+          <p class="party-highlight-description">
+            Im April 2022 stimmte die <a href="spd.html">SPD</a> gemeinsam mit
+            den <a href="gruene.html">Grünen</a> im Bundestag für eine
+            allgemeine Impfpflicht gegen COVID-19. Diese Entscheidung stieß auf
+            <strong>massive Ablehnung</strong> und führte zu
+            <mark>landesweiten Protesten</mark>, da viele Menschen die
+            Zwangsmaßnahme als einen direkten Angriff auf ihre
+            <strong>persönlichen Freiheiten</strong> und ihr Recht auf
+            <strong>körperliche Unversehrtheit</strong> sahen.
+          </p>
+          <p class="party-highlight-description">
+            Unter anderem stimmten die folgenden
+            <a href="spd.html">SPD</a>-Abgeordneten für die Impfpflicht:
+            <a href="esken.html">Esken</a>, Heil,
+            <a href="klingbeil.html">Klingbeil</a>, Kühnert, Lauterbach und
+            <a href="scholz.html">Scholz</a>.
+          </p>
+          <p class="party-highlight-description">
+            Kritiker warfen der <a href="spd.html">SPD</a> vor, das fundamentale
+            Recht jedes Einzelnen auf
+            <strong>körperliche Unversehrtheit</strong> zu ignorieren. Der Staat
+            hat nicht das Recht, den Bürgern vorzuschreiben, was sie mit ihrem
+            Körper anstellen. Die Entscheidung, eine Impfpflicht durchzusetzen,
+            wäre ein schwerwiegender Eingriff in die
+            <strong>persönliche Freiheit</strong> und die
+            <strong>Selbstbestimmung</strong> der Menschen gewesen und hätte die
+            Gesellschaft weiter gespalten.
+          </p>
+          <p class="party-highlight-description">
+            Zudem war der Nutzen der sogenannten "Impfung"
+            <mark>fragwürdig</mark>. Viele gesundheitliche Risiken und
+            Nebenwirkungen wurden entweder verschwiegen oder heruntergespielt.
+            Eine ordentliche Aufklärung über mögliche Risiken und langfristige
+            Auswirkungen wurde weitestgehend verhindert, wodurch die Menschen in
+            ihrer <strong>Entscheidungsfreiheit</strong>
+            und -kompetenz massiv eingeschränkt wurden.
+          </p>
+          <p class="party-highlight-description">
+            Das Gesetz zur Impfpflicht konnte nur durch die starke Ablehnung aus
+            anderen Parteien verhindert werden: Die
+            <a href="cducsu.html">CDU/CSU</a>, die
+            <a href="fdp.html">FDP</a> und die
+            <a href="linke.html">Linke</a> stimmten größtenteils gegen das
+            Gesetz. Die <a href="afd.html">AfD</a> war die einzige Partei, die
+            <strong>geschlossen ohne Ausnahme</strong> gegen die Impfpflicht
             stimmte.
           </p>
 
