--- a/bsw.html
+++ b/bsw.html
@@ -93,45 +93,27 @@
 
             <div class="collapsible-content">
                 <p class="party-highlight-description">
-                    Die <b>Co-Parteivorsitzende des BSW, Amira Mohamed Ali</b>, sorgte
-                    im mit einer <b>kontroversen Aussage zu
-                    Abschiebungen</b> für Aufsehen.  In einem Interview mit Tilo Jung
-                    äußerte sie sich <b>sehr skeptisch gegenüber Abschiebungen</b> und
-                    ließ erkennen, dass sie diese <b>grundsätzlich ablehnen</b> würde.
-                    Sie betonte die <b>Bedeutung "freiwilliger Ausreisen"</b> und
-                    bezeichnete Abschiebungen als <b>"inhuman"</b>.
+                    Die <strong>Co-Parteivorsitzende des BSW, Amira Mohamed Ali</strong>, sorgte mit einer <strong>kontroversen Aussage zu Abschiebungen</strong> für Aufsehen. In einem Interview mit Tilo Jung
+                    äußerte sie sich <strong>sehr skeptisch gegenüber Abschiebungen</strong> und ließ erkennen, dass sie diese <strong>grundsätzlich ablehnen</strong> würde.
+                    Sie betonte die <strong>Bedeutung "freiwilliger Ausreisen"</strong> und bezeichnete Abschiebungen als <mark>"inhuman"</mark>.
                 </p>
                 <p class="party-highlight-description">
-                    <strong>Brisant ist, dass diese ablehnende Haltung gegenüber
-                        Abschiebungen bei Amira Mohamed Ali offenbar keine neue
-                        Entwicklung ist.</strong>  Bereits in einem früheren <strong>Interview mit
-                        Tilo Jung im Jahr 2019</strong> äußerte sie sich in ähnlicher Weise.
-                        Auf die Frage von Tilo Jung, ob sie generell gegen Abschiebungen
-                        sei ("Egal wohin, egal wer?"), antwortete Amira Mohamed Ali
-                        damals: <strong>„Ich bin generell gegen die Abschiebepraxis, die es
-                        bis jetzt gibt. Keine Abschiebung nach Afghanistan, keine
-                        Abschiebung nach Syrien. Gar nichts!“</strong>  Diese frühere Aussage
-                        unterstreicht, dass Amira Mohamed Ali <strong>schon seit Längerem
-                        eine grundsätzlich ablehnende Position zu Abschiebungen
-                        vertritt.</strong>
+                    Auf die Frage von Tilo Jung, ob sie generell gegen Abschiebungen sei ("Egal wohin, egal wer?"), antwortete Amira Mohamed Ali
+                    damals: <strong>„Ich bin generell gegen die Abschiebepraxis, die es bis jetzt gibt. Keine Abschiebung nach Afghanistan, keine
+                    Abschiebung nach Syrien. Gar nichts!”</strong>
                 </p>
                 <p class="party-highlight-description">
-                    Diese Aussage steht <b>im klaren Widerspruch zu geltendem
-                    Recht</b>, das Abschiebungen in bestimmten Fällen vorsieht und
-                    auch <b>von der Bevölkerung mehrheitlich befürwortet</b> wird.
-                    Kritiker werfen Amira Mohamed Ali vor, <b>rechtsstaatliche
-                    Prinzipien zu missachten</b> und die <b>Notwendigkeit von
-                    Abschiebungen zur Durchsetzung des Rechtsstaates zu
-                    ignorieren</b>.
+                    Diese Aussage steht <strong>im klaren Widerspruch zu geltendem Recht</strong>, das Abschiebungen in bestimmten Fällen vorsieht und
+                    auch <strong>von der Bevölkerung mehrheitlich befürwortet</strong> wird.
+                    Kritiker werfen Amira Mohamed Ali vor, <strong>rechtsstaatliche Prinzipien zu missachten</strong> und die <strong>Notwendigkeit von
+                    Abschiebungen zur Durchsetzung des Rechtsstaates zu ignorieren</strong>.
                 </p>
                 <p class="party-highlight-description">
-                    Zudem wird kritisiert, dass die <b>Aussage im Widerspruch zur
-                    eher restriktiven Migrationspolitik des BSW</b> insgesamt steht,
-                    wie sie insbesondere von Sahra Wagenknecht vertreten wird.  Es
-                    entsteht der Eindruck einer <b>inhaltlichen Uneinigkeit in der
-                    Parteispitze</b> und einer <b>möglichen Schwächung der
-                    Glaubwürdigkeit des BSW in Fragen der inneren Sicherheit</b>.
+                    Zudem wird kritisiert, dass die <strong>Aussage im Widerspruch zur eher restriktiven Migrationspolitik des BSW</strong> insgesamt steht,
+                    wie sie insbesondere von Sahra Wagenknecht vertreten wird. Es entsteht der Eindruck einer <strong>inhaltlichen Uneinigkeit in der
+                    Parteispitze</strong> und einer <mark>möglichen Schwächung der Glaubwürdigkeit des BSW in Fragen der inneren Sicherheit</mark>.
                 </p>
+                
 
                 <p class="party-highlight-date">
                     <strong>Zeitraum:</strong> März 2019
