--- a/bsw.html
+++ b/bsw.html
@@ -113,7 +113,19 @@
                     wie sie insbesondere von Sahra Wagenknecht vertreten wird. Es entsteht der Eindruck einer <strong>inhaltlichen Uneinigkeit in der
                     Parteispitze</strong> und einer <mark>möglichen Schwächung der Glaubwürdigkeit des BSW in Fragen der inneren Sicherheit</mark>.
                 </p>
-                
+                <blockquote class="twitter-tweet" data-lang="de">
+                    <p lang="de" dir="ltr">
+                      Für alle, die mit dem Gedanken spielen, das "Bündnis Sahra 
+                      <a href="https://twitter.com/hashtag/Wagenknecht?src=hash&amp;ref_src=twsrc%5Etfw">#Wagenknecht</a>" sei wählbar: 
+                      Hier ist Amira Mohamed Ali, die Nr. 2 der Partei, zum Thema Abschiebung. 
+                      <a href="https://twitter.com/hashtag/BSW?src=hash&amp;ref_src=twsrc%5Etfw">#BSW</a> 
+                      <a href="https://t.co/9WtmXRuHLt">pic.twitter.com/9WtmXRuHLt</a>
+                    </p>
+                    &mdash; Peter Borbe (@PeterBorbe) 
+                    <a href="https://twitter.com/PeterBorbe/status/1722132592076652914?ref_src=twsrc%5Etfw">November 8, 2023</a>
+                  </blockquote>
+                  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                  
 
                 <p class="party-highlight-date">
                     <strong>Zeitraum:</strong> März 2019
