--- a/scholz.html
+++ b/scholz.html
@@ -408,9 +408,8 @@
             <li class="party-member-item">
         <a href="esken.html">Saskia Esken</a>
       </li>   
-      <li class="party-member-item">
-        <a href="lauterbach.html">Karl Lauterbach</a>
-      </li>    
+      <li class="party-member-item">Karl Lauterbach</li>
+    </ul> 
   </section>
 
     <footer class="party-footer">
