--- a/klingbeil.html
+++ b/klingbeil.html
@@ -122,7 +122,6 @@
   
       </div>
     </div>
-  
 
     </section>
 
@@ -135,9 +134,8 @@
             <li class="party-member-item">
         <a href="esken.html">Saskia Esken</a>
       </li>   
-      <li class="party-member-item">
-        <a href="lauterbach.html">Karl Lauterbach</a>
-      </li>    
+      <li class="party-member-item">Karl Lauterbach</li>
+    </ul>  
   </section>
 
     <footer class="party-footer">
