--- a/esken.html
+++ b/esken.html
@@ -126,9 +126,9 @@
                  <li class="party-member-item">
         <a href="klingbeil.html">Lars Klingbeil</a>
       </li>
-      <li class="party-member-item">
-        <a href="lauterbach.html">Karl Lauterbach</a>
-      </li>    
+    </li>   
+    <li class="party-member-item">Karl Lauterbach</li>
+  </ul>    
   </section>
 
     <footer class="party-footer">
