--- a/gruene.html
+++ b/gruene.html
@@ -93,27 +93,31 @@
       Details anzeigen <span class="arrow">▼</span>
     </button>
 
-  <!-- Zusammenklappbarer Inhalt -->
+<!-- Zusammenklappbarer Inhalt -->
 <div class="collapsible-content">
   <p class="party-highlight-description">
-    Im April 2022 stimmten die Grünen gemeinsam mit der SPD im Bundestag für eine allgemeine Impfpflicht gegen COVID-19. Diese Entscheidung stieß auf massive Ablehnung und führte zu landesweiten Protesten, da viele Menschen die Zwangsmaßnahme als einen direkten Angriff auf ihre persönlichen Freiheiten und ihr Recht auf körperliche Unversehrtheit sahen.
-  </p>
-  <p class="party-highlight-description">
-    Unter anderem stimmten die folgenden Grünen-Abgeordneten für die Impfpflicht: <a href="baerbock.html">Baerbock</a>, <a href="fester.html">Fester</a>,  <a href="goering-eckardt.html">Göring-Eckardt</a>,  Hofreiter, <a href="habeck.html">Habeck</a>, Künast, <a href="lang.html">Lang</a>,  Özdemir, Nouripour und Roth. 
-  </p>
-  <p class="party-highlight-description">
-    Kritiker warfen den Grünen vor, das fundamentale Recht jedes Einzelnen auf körperliche Unversehrtheit zu ignorieren. Der Staat hat nicht das Recht, den Bürgern vorzuschreiben, was sie mit ihrem Körper anstellen. Die Entscheidung, eine Impfpflicht durchzusetzen, wäre ein schwerwiegender Eingriff in die persönliche Freiheit und die Selbstbestimmung der Menschen gewesen und hätte die Gesellschaft weiter gespalten.
-  </p>
-  <p class="party-highlight-description">
-    Zudem war der Nutzen der sogenannten "Impfung" fragwürdig. Viele gesundheitliche Risiken und Nebenwirkungen wurden entweder verschwiegen oder heruntergespielt. Eine ordentliche Aufklärung über mögliche Risiken und langfristige Auswirkungen wurde weitestgehend verhindert, wodurch die Menschen in ihrer Entscheidungsfreiheit und -kompetenz massiv eingeschränkt wurden.
-  </p>
-      <p class="party-highlight-description">
-    Das Gesetz zur Impfpflicht konnte nur durch die starke Ablehnung
-    aus anderen Parteien verhindert werden: Die CDU/CSU, die FDP und die
-    Linke stimmten größtenteils gegen das Gesetz. Die AfD war die einzige
-    Partei, die geschlossen ohne Ausnahme gegen die Impfpflicht stimmte.
+    Im <strong>April 2022</strong> stimmten die <strong>Grünen</strong> gemeinsam mit der <strong>SPD</strong> im Bundestag für eine allgemeine
+    <strong>Impfpflicht gegen COVID-19</strong>. Diese Entscheidung stieß auf massive Ablehnung und führte zu <mark>landesweiten Protesten</mark>,
+    da viele Menschen die Zwangsmaßnahme als einen direkten Angriff auf ihre persönlichen Freiheiten und ihr Recht auf <strong>körperliche Unversehrtheit</strong>
+    sahen.
   </p>
 
+  <p class="party-highlight-description">
+    Unter anderem stimmten die folgenden Grünen-Abgeordneten für die Impfpflicht: <a href="baerbock.html">Baerbock</a>, <a href="fester.html">Fester</a>, <a href="goering-eckardt.html">Göring-Eckardt</a>, Hofreiter, <a href="habeck.html">Habeck</a>, Künast, <a href="lang.html">Lang</a>, Özdemir, Nouripour und Roth.
+  </p>
+
+  <p class="party-highlight-description">
+    <strong>Kritiker</strong> warfen den <strong>Grünen</strong> vor, das fundamentale Recht jedes Einzelnen auf <strong>körperliche Unversehrtheit</strong> zu ignorieren. Der Staat hat nicht das Recht, den Bürgern vorzuschreiben, was sie mit ihrem Körper anstellen. Die Entscheidung, eine Impfpflicht durchzusetzen, wäre ein schwerwiegender Eingriff in die persönliche <mark>Freiheit</mark> und die <mark>Selbstbestimmung</mark> der Menschen gewesen und hätte die Gesellschaft weiter gespalten.
+  </p>
+
+  <p class="party-highlight-description">
+    Zudem war der <strong>Nutzen der "Impfung"</strong> fragwürdig. Viele gesundheitliche <mark>Risiken</mark> und <mark>Nebenwirkungen</mark> wurden entweder verschwiegen oder heruntergespielt. Eine ordentliche <strong>Aufklärung</strong> über mögliche Risiken und langfristige Auswirkungen wurde weitestgehend verhindert, wodurch die Menschen in ihrer Entscheidungsfreiheit und -kompetenz massiv eingeschränkt wurden.
+  </p>
+
+  <p class="party-highlight-description">
+    Das Gesetz zur Impfpflicht konnte nur durch die starke Ablehnung aus anderen Parteien verhindert werden: Die <a href="cducsu.html"><strong>CDU/CSU</strong></a>, die <a href="fdp.html"><strong>FDP</strong></a> und die <a href="linke.html"><strong>Linke</strong></a> stimmten größtenteils gegen das Gesetz. Die <a href="afd.html"><strong>AfD</strong></a> war die einzige Partei, die geschlossen ohne Ausnahme gegen die Impfpflicht stimmte.
+  </p>
+  
       <p class="party-highlight-date">
         <strong>Zeitraum:</strong> April 2022
       </p>
@@ -174,44 +178,38 @@
           Details anzeigen <span class="arrow">▼</span>
         </button>
 
-        <!-- Zusammenklappbarer Inhalt -->
-        <div class="collapsible-content">
-          <p class="party-highlight-description">
-            Der <b>Kosovo-Luftangriff</b> von 1999 war eine militärische
-            Operation der NATO gegen das
-            <b>Regime von Slobodan Milošević</b> und die
-            <b>jugoslawische Armee</b>. Der Luftangriff fand im Rahmen des
-            Kosovo-Konflikts statt, der sich um die ethnischen Spannungen
-            zwischen Serben und Albanern in der Region drehte.
-          </p>
-          <p class="party-highlight-description">
-            Der Angriff wurde
-            <b>ohne Mandat des UN-Sicherheitsrats</b> durchgeführt und war daher
-            <mark>völkerrechtswidrig</mark>. Nach geltendem Völkerrecht war die
-            Bombardierung <b>illegal</b>, da sie gegen das
-            <b>Gewaltverbot der UN-Charta</b> verstieß. Besonders die
-            <b>deutsche Regierung unter Gerhard Schröder (SPD)</b> und die
-            <b>Grünen</b> spielten eine entscheidende Rolle bei der Beteiligung
-            Deutschlands.
-          </p>
-          <p class="party-highlight-description">
-            Außenminister <b>Joschka Fischer (Grüne)</b> rechtfertigte den
-            Einsatz als notwendig, um eine humanitäre Katastrophe zu verhindern.
-            Dies führte zu heftigen Protesten innerhalb seiner eigenen Partei.
-            Auf dem Grünen-Parteitag 1999 wurde Fischer mit einem
-            <b>roten Farbbeutel</b> beworfen – als Symbol für „Blut an den
-            Händen“. Trotz Widerstandes in der Partei setzten sich Schröder und
-            Fischer durch und machten Deutschland erstmals seit 1945 zur aktiven
-            Kriegspartei.
-          </p>
-          <p class="party-highlight-description">
-            Kritiker werfen der NATO vor, durch das militärische Eingreifen
-            <b>die Souveränität Jugoslawiens verletzt</b> und einen
-            <b>völkerrechtswidrigen Präzedenzfall</b> geschaffen zu haben. Der
-            Luftangriff führte zu massiven Spannungen zwischen dem Westen und
-            Russland und prägt die geopolitischen Beziehungen bis heute.
-          </p>
+<!-- Zusammenklappbarer Inhalt -->
+<div class="collapsible-content">
+  <p class="party-highlight-description">
+    Der <strong>Kosovo-Luftangriff</strong> von 1999 war eine militärische
+    Operation der NATO gegen das <strong>Regime von Slobodan Milošević</strong> und die <strong>jugoslawische Armee</strong>. Der Luftangriff fand im Rahmen des
+    Kosovo-Konflikts statt, der sich um die ethnischen Spannungen zwischen Serben und Albanern in der Region drehte.
+  </p>
+  
+  <p class="party-highlight-description">
+    Der Angriff wurde
+    <strong>ohne Mandat des UN-Sicherheitsrats</strong> durchgeführt und war daher <mark>völkerrechtswidrig</mark>. Nach geltendem Völkerrecht war die
+    Bombardierung <strong>illegal</strong>, da sie gegen das <strong>Gewaltverbot der UN-Charta</strong> verstieß. Besonders die
+    <strong>deutsche Regierung unter Gerhard Schröder (SPD)</strong> und die <mark>Grünen</mark> spielten eine entscheidende Rolle bei der Beteiligung Deutschlands.
+  </p>
 
+  <p class="party-highlight-description">
+    Außenminister <strong>Joschka Fischer (Grüne)</strong> rechtfertigte den
+    Einsatz als notwendig, um eine humanitäre Katastrophe zu verhindern.
+    Dies führte zu heftigen Protesten innerhalb seiner eigenen Partei.
+    Auf dem Grünen-Parteitag 1999 wurde Fischer mit einem <mark>roten Farbbeutel</mark> beworfen – als Symbol für „Blut an den
+    Händen“. Trotz Widerstandes in der Partei setzten sich Schröder und
+    Fischer durch und machten Deutschland erstmals seit 1945 zur aktiven Kriegspartei.
+  </p>
+
+  <p class="party-highlight-description">
+    Kritiker werfen der NATO vor, durch das militärische Eingreifen
+    <strong>die Souveränität Jugoslawiens verletzt</strong> und einen
+    <mark>völkerrechtswidrigen Präzedenzfall</mark> geschaffen zu haben. Der
+    Luftangriff führte zu massiven Spannungen zwischen dem Westen und
+    Russland und prägt die geopolitischen Beziehungen bis heute.
+  </p>
+</div>
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> März – Juni 1999
           </p>
