--- a/afd.html
+++ b/afd.html
@@ -121,41 +121,48 @@
           Details anzeigen <span class="arrow">▼</span>
         </button>
 
-       <!-- Zusammenklappbarer Inhalt -->
-<div class="collapsible-content">
-  <p class="party-highlight-description">
-    Im März 2021 stufte das <strong>Bundesamt für Verfassungsschutz (BfV)</strong> die
-    <strong>AfD</strong> als <mark>rechtsextremistischen Verdachtsfall</mark> ein. Damit wurde die
-    Beobachtung der Partei mit nachrichtendienstlichen Mitteln
-    ermöglicht. Diese Entscheidung stützte sich auf eine Untersuchung,
-    die bereits 2019 eingeleitet wurde. Eine Begründung zur Einstufung
-    wurde nicht mitgeteilt.
-  </p>
+        <!-- Zusammenklappbarer Inhalt -->
+        <div class="collapsible-content">
+          <p class="party-highlight-description">
+            Im März 2021 stufte das
+            <strong>Bundesamt für Verfassungsschutz (BfV)</strong> die
+            <strong>AfD</strong> als
+            <mark>rechtsextremistischen Verdachtsfall</mark> ein. Damit wurde
+            die Beobachtung der Partei mit nachrichtendienstlichen Mitteln
+            ermöglicht. Diese Entscheidung stützte sich auf eine Untersuchung,
+            die bereits 2019 eingeleitet wurde. Eine Begründung zur Einstufung
+            wurde nicht mitgeteilt.
+          </p>
 
-  <p class="party-highlight-description">
-    Die <strong>AfD</strong> klagte gegen diese Einstufung und konnte zunächst per
-    Eilantrag verhindern, dass sie öffentlich als Verdachtsfall
-    bezeichnet wurde. Doch 2022 entschied das <strong>Verwaltungsgericht Köln</strong>,
-    dass die Einstufung zulässig sei, da es ausreichend Anhaltspunkte
-    für <mark>verfassungsfeindliche Bestrebungen</mark> gebe. Die Partei legte
-    daraufhin Berufung ein, die 2024 vom <strong>Oberverwaltungsgericht Münster</strong>
-    zurückgewiesen wurde.
-  </p>
+          <p class="party-highlight-description">
+            Die <strong>AfD</strong> klagte gegen diese Einstufung und konnte
+            zunächst per Eilantrag verhindern, dass sie öffentlich als
+            Verdachtsfall bezeichnet wurde. Doch 2022 entschied das
+            <strong>Verwaltungsgericht Köln</strong>, dass die Einstufung
+            zulässig sei, da es ausreichend Anhaltspunkte für
+            <mark>verfassungsfeindliche Bestrebungen</mark> gebe. Die Partei
+            legte daraufhin Berufung ein, die 2024 vom
+            <strong>Oberverwaltungsgericht Münster</strong>
+            zurückgewiesen wurde.
+          </p>
 
-  <p class="party-highlight-description">
-    <strong>AfD-Kritiker</strong> sehen in der Einstufung ein legitimes Mittel zur
-    Verteidigung der freiheitlich-demokratischen Grundordnung. Andere
-    halten sie für <mark>politisch motiviert</mark>. Die <strong>Bundesregierung</strong> verweigerte
-    auf eine Anfrage der AfD detaillierte Auskünfte zu den angewandten
-    geheimdienstlichen Methoden unter Verweis auf das <mark>Staatswohl</mark>.
-  </p>
+          <p class="party-highlight-description">
+            <strong>AfD-Kritiker</strong> sehen in der Einstufung ein legitimes
+            Mittel zur Verteidigung der freiheitlich-demokratischen
+            Grundordnung. Andere halten sie für
+            <mark>politisch motiviert</mark>. Die
+            <strong>Bundesregierung</strong> verweigerte auf eine Anfrage der
+            AfD detaillierte Auskünfte zu den angewandten geheimdienstlichen
+            Methoden unter Verweis auf das <mark>Staatswohl</mark>.
+          </p>
 
-  <p class="party-highlight-description">
-    <strong>AfD-Politiker</strong> bezeichnen die Einstufung als „Versuch, eine
-    unliebsame Oppositionspartei zu kriminalisieren“, während Vertreter
-    der Regierung und des Verfassungsschutzes betonen, dass es sich um
-    eine fachliche, nicht politische Entscheidung handele.
-  </p>
+          <p class="party-highlight-description">
+            <strong>AfD-Politiker</strong> bezeichnen die Einstufung als
+            „Versuch, eine unliebsame Oppositionspartei zu kriminalisieren“,
+            während Vertreter der Regierung und des Verfassungsschutzes betonen,
+            dass es sich um eine fachliche, nicht politische Entscheidung
+            handele.
+          </p>
 
           <div class="video-container">
             <iframe
@@ -235,7 +242,9 @@
     <section class="party-members">
       <h2 class="party-section-title">Bekannte Mitglieder</h2>
       <ul class="party-members-list">
-        <li class="party-member-item">Alice Weidel</li>
+        <li class="party-member-item">
+          <a href="weidel.html">Alice Weidel</a>
+        </li>
         <li class="party-member-item">Tino Chrupalla</li>
         <li class="party-member-item">Björn Höcke</li>
         <li class="party-member-item">Maximilian Krah</li>
