--- a/impressum.html
+++ b/impressum.html
@@ -16,14 +16,14 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="impressum-container">
-      <div class="impressum-content">
-        <div class="impressum-header">
-          <h1 class="impressum-title">Impressum</h1>
+    <div class="datenschutz-container">
+      <!-- Hier den Container verwenden, der korrekt gestylt wird -->
+      <div class="datenschutz-content">
+        <div class="datenschutz-header">
+          <h1 class="datenschutz-title">Impressum</h1>
         </div>
-
-        <h2 class="impressum-section-title">Angaben gemäß § 5 TMG</h2>
-        <p class="impressum-text">
+        <h2 class="datenschutz-section-title">Angaben gemäß § 5 TMG</h2>
+        <p class="datenschutz-text">
           <strong>factico.</strong><br />
           Betreiber der Webseite: <br />
           Andreas Siade<br />
@@ -32,25 +32,25 @@
           Deutschland
         </p>
 
-        <h2 class="impressum-section-title">Kontakt</h2>
-        <p class="impressum-text">
+        <h2 class="datenschutz-section-title">Kontakt</h2>
+        <p class="datenschutz-text">
           E-Mail: <a href="mailto:contact@factico.eu">contact@factico.eu</a
           ><br />
           Webseite:
           <a href="https://www.factico.eu" target="_blank">www.factico.eu</a>
         </p>
 
-        <h2 class="impressum-section-title">
+        <h2 class="datenschutz-section-title">
           Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV
         </h2>
-        <p class="impressum-text">
+        <p class="datenschutz-text">
           Andreas Siade<br />
           Adolf-Baeyer-Damm 8<br />
           81735 München
         </p>
 
-        <h2 class="impressum-section-title">Haftungsausschluss</h2>
-        <p class="impressum-text">
+        <h2 class="datenschutz-section-title">Haftungsausschluss</h2>
+        <p class="datenschutz-text">
           Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für
           die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir
           jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7
@@ -61,8 +61,8 @@
           forschen, die auf eine rechtswidrige Tätigkeit hinweisen.
         </p>
 
-        <h2 class="impressum-section-title">Externe Links</h2>
-        <p class="impressum-text">
+        <h2 class="datenschutz-section-title">Externe Links</h2>
+        <p class="datenschutz-text">
           Unsere Webseite enthält Links zu externen Webseiten Dritter, auf deren
           Inhalte wir keinen Einfluss haben. Deshalb können wir für diese
           fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der
@@ -70,8 +70,8 @@
           Seiten verantwortlich.
         </p>
 
-        <h2 class="impressum-section-title">Urheberrecht</h2>
-        <p class="impressum-text">
+        <h2 class="datenschutz-section-title">Urheberrecht</h2>
+        <p class="datenschutz-text">
           Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen
           Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung,
           Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der
