--- a/datenschutz.html
+++ b/datenschutz.html
@@ -15,79 +15,120 @@
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
     <link rel="stylesheet" href="styles.css" />
   </head>
-<body>
+  <body>
+    <div class="datenschutz-container">
+      <div class="datenschutz-content">
+        <div class="datenschutz-header">
+          <h1 class="datenschutz-title">Datenschutz</h1>
+        </div>
 
-  <div class="datenschutz-container">
-    <div class="datenschutz-content">
-      <div class="datenschutz-header">
-        <h1 class="datenschutz-title">Datenschutz</h1>
+        <h2 class="datenschutz-section-title">
+          1. Datenschutz auf einen Blick
+        </h2>
+        <p class="datenschutz-text">
+          Wir nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Nachfolgend
+          informieren wir Sie über die Erhebung und Verwendung personenbezogener
+          Daten bei Nutzung unserer Webseite.
+        </p>
+
+        <h2 class="datenschutz-section-title">2. Allgemeine Hinweise</h2>
+        <p class="datenschutz-text">
+          Die folgenden Hinweise geben einen einfachen Überblick darüber, was
+          mit Ihren personenbezogenen Daten passiert, wenn Sie unsere Webseite
+          besuchen. Personenbezogene Daten sind alle Daten, mit denen Sie
+          persönlich identifiziert werden können.
+        </p>
+
+        <h2 class="datenschutz-section-title">
+          3. Wer ist verantwortlich für die Datenverarbeitung?
+        </h2>
+        <p class="datenschutz-text">
+          Verantwortlicher im Sinne der Datenschutzgesetze ist:
+          <br /><strong>factico.</strong><br />
+          Andreas Siade<br />
+          Adolf-Baeyer-Damm 8<br />
+          81735 München<br />
+          Deutschland<br />
+          E-Mail: <a href="mailto:contact@factico.eu">contact@factico.eu</a>
+        </p>
+
+        <h2 class="datenschutz-section-title">
+          4. Welche Daten erheben wir und wofür nutzen wir sie?
+        </h2>
+        <p class="datenschutz-text">
+          Wir erheben personenbezogene Daten nur, wenn Sie uns diese aktiv
+          mitteilen, z.B. durch das Ausfüllen eines Kontaktformulars oder das
+          Abonnieren unseres Newsletters. Die von uns gesammelten Daten
+          umfassen:
+        </p>
+
+        <dl class="datenschutz-list">
+          <dt>Kontaktinformationen:</dt>
+          <dd>z.B. Name, E-Mail-Adresse</dd>
+          <dt>Technische Daten:</dt>
+          <dd>z.B. IP-Adresse, Browserinformationen</dd>
+        </dl>
+
+        <p class="datenschutz-text">
+          Wir nutzen diese Daten, um Ihnen unsere Dienste anzubieten, auf
+          Anfragen zu reagieren und die Nutzung unserer Webseite zu verbessern.
+        </p>
+
+        <h2 class="datenschutz-section-title">
+          5. Wie schützen wir Ihre Daten?
+        </h2>
+        <p class="datenschutz-text">
+          Der Schutz Ihrer persönlichen Daten ist uns sehr wichtig. Wir haben
+          geeignete technische und organisatorische Maßnahmen getroffen, um Ihre
+          Daten vor Verlust, Missbrauch und unbefugtem Zugriff zu schützen.
+        </p>
+
+        <h2 class="datenschutz-section-title">6. Cookies</h2>
+        <p class="datenschutz-text">
+          Unsere Webseite verwendet Cookies. Cookies sind kleine Textdateien,
+          die auf Ihrem Endgerät gespeichert werden und die eine Analyse der
+          Benutzung der Webseite ermöglichen. Sie können das Speichern von
+          Cookies verhindern, indem Sie die Einstellungen Ihres Browsers ändern.
+        </p>
+
+        <h2 class="datenschutz-section-title">7. Ihre Rechte</h2>
+        <p class="datenschutz-text">Sie haben das Recht:</p>
+
+        <dl class="datenschutz-list">
+          <dt>Auskunft:</dt>
+          <dd>Über Ihre bei uns gespeicherten Daten zu erhalten</dd>
+          <dt>Berichtigung oder Löschung:</dt>
+          <dd>Die Berichtigung oder Löschung Ihrer Daten zu verlangen</dd>
+          <dt>Widerspruch:</dt>
+          <dd>Der Verarbeitung Ihrer Daten zu widersprechen</dd>
+          <dt>Einschränkung der Verarbeitung:</dt>
+          <dd>Die Einschränkung der Verarbeitung Ihrer Daten zu verlangen</dd>
+        </dl>
+
+        <p class="datenschutz-text">
+          Wenn Sie eines dieser Rechte wahrnehmen möchten, können Sie uns
+          jederzeit unter
+          <a href="mailto:contact@factico.eu">contact@factico.eu</a>
+          kontaktieren.
+        </p>
+
+        <h2 class="datenschutz-section-title">8. Externe Links</h2>
+        <p class="datenschutz-text">
+          Unsere Webseite enthält Links zu externen Webseiten Dritter, auf deren
+          Inhalte wir keinen Einfluss haben. Deshalb können wir für diese
+          fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der
+          verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der
+          Seiten verantwortlich.
+        </p>
+
+        <h2 class="datenschutz-section-title">
+          9. Änderungen dieser Datenschutzerklärung
+        </h2>
+        <p class="datenschutz-text">
+          Wir behalten uns vor, diese Datenschutzerklärung jederzeit zu ändern.
+          Die jeweils aktuelle Version finden Sie immer auf dieser Seite.
+        </p>
       </div>
-
-      <h2 class="datenschutz-section-title">1. Datenschutz auf einen Blick</h2>
-      <p class="datenschutz-text">
-        Wir nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Nachfolgend informieren wir Sie über die Erhebung und Verwendung personenbezogener Daten bei Nutzung unserer Webseite. 
-      </p>
-
-      <h2 class="datenschutz-section-title">2. Allgemeine Hinweise</h2>
-      <p class="datenschutz-text">
-        Die folgenden Hinweise geben einen einfachen Überblick darüber, was mit Ihren personenbezogenen Daten passiert, wenn Sie unsere Webseite besuchen. Personenbezogene Daten sind alle Daten, mit denen Sie persönlich identifiziert werden können.
-      </p>
-
-      <h2 class="datenschutz-section-title">3. Wer ist verantwortlich für die Datenverarbeitung?</h2>
-      <p class="datenschutz-text">
-        Verantwortlicher im Sinne der Datenschutzgesetze ist:
-        <br><strong>factico.</strong><br>
-        Andreas Siade<br>
-        Adolf-Baeyer-Damm 8<br>
-        81735 München<br>
-        Deutschland<br>
-        E-Mail: <a href="mailto:contact@factico.eu">contact@factico.eu</a>
-      </p>
-
-      <h2 class="datenschutz-section-title">4. Welche Daten erheben wir und wofür nutzen wir sie?</h2>
-      <p class="datenschutz-text">
-        Wir erheben personenbezogene Daten nur, wenn Sie uns diese aktiv mitteilen, z.B. durch das Ausfüllen eines Kontaktformulars oder das Abonnieren unseres Newsletters. Die von uns gesammelten Daten umfassen:
-        <ul>
-          <li>Kontaktinformationen (z.B. Name, E-Mail-Adresse)</li>
-          <li>Technische Daten (z.B. IP-Adresse, Browserinformationen)</li>
-        </ul>
-        Wir nutzen diese Daten, um Ihnen unsere Dienste anzubieten, auf Anfragen zu reagieren und die Nutzung unserer Webseite zu verbessern.
-      </p>
-
-      <h2 class="datenschutz-section-title">5. Wie schützen wir Ihre Daten?</h2>
-      <p class="datenschutz-text">
-        Der Schutz Ihrer persönlichen Daten ist uns sehr wichtig. Wir haben geeignete technische und organisatorische Maßnahmen getroffen, um Ihre Daten vor Verlust, Missbrauch und unbefugtem Zugriff zu schützen.
-      </p>
-
-      <h2 class="datenschutz-section-title">6. Cookies</h2>
-      <p class="datenschutz-text">
-        Unsere Webseite verwendet Cookies. Cookies sind kleine Textdateien, die auf Ihrem Endgerät gespeichert werden und die eine Analyse der Benutzung der Webseite ermöglichen. Sie können das Speichern von Cookies verhindern, indem Sie die Einstellungen Ihres Browsers ändern.
-      </p>
-
-      <h2 class="datenschutz-section-title">7. Ihre Rechte</h2>
-      <p class="datenschutz-text">
-        Sie haben das Recht:
-        <ul>
-          <li>Auskunft über Ihre bei uns gespeicherten Daten zu erhalten</li>
-          <li>Die Berichtigung oder Löschung Ihrer Daten zu verlangen</li>
-          <li>Der Verarbeitung Ihrer Daten zu widersprechen</li>
-          <li>Die Einschränkung der Verarbeitung Ihrer Daten zu verlangen</li>
-        </ul>
-        Wenn Sie eines dieser Rechte wahrnehmen möchten, können Sie uns jederzeit unter <a href="mailto:contact@factico.eu">contact@factico.eu</a> kontaktieren.
-      </p>
-
-      <h2 class="datenschutz-section-title">8. Externe Links</h2>
-      <p class="datenschutz-text">
-        Unsere Webseite enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich.
-      </p>
-
-      <h2 class="datenschutz-section-title">9. Änderungen dieser Datenschutzerklärung</h2>
-      <p class="datenschutz-text">
-        Wir behalten uns vor, diese Datenschutzerklärung jederzeit zu ändern. Die jeweils aktuelle Version finden Sie immer auf dieser Seite.
-      </p>
-
     </div>
-  </div>
-
-</body>
+  </body>
 </html>
