--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
             <div class="about-item">
               <h3>Informationen und Fakten</h3>
               <p>
-                Viele Menschen treffen ihre Wahl aufgrund oberflächlicher
-                Eindrücke oder durch die Wahrnehmung in den Medien, ohne sich
-                mit den tieferliegenden Fakten auseinanderzusetzen.
+                In der heutigen Informationsflut gehen die wirklich wichtigen
+                Fakten oft unter oder werden schnell vergessen. Viele
+                Entscheidungen basieren auf oberflächlichen Eindrücken, ohne die
+                entscheidenden Hintergründe zu berücksichtigen.
               </p>
               <p>
-                Wir sammeln und präsentieren alle relevanten Kontroversen, um
-                Ihnen einen klaren Überblick zu verschaffen und eine fundierte
-                Entscheidungsgrundlage zu bieten.
+                Wir bündeln wir für Sie die relevanten und oft übersehenen
+                Kontroversen, damit Sie schnell einen klaren Überblick erhalten.
               </p>
             </div>
             <div class="about-item">
@@ -142,8 +142,8 @@
               <div class="step-number" aria-hidden="true">2</div>
               <h3>Vergleichen</h3>
               <p>
-                Setzen Sie politische Entscheidungen und Positionen ins Verhältnis – und
-                gewinnen Sie so ein klareres Bild.
+                Setzen Sie politische Entscheidungen und Positionen ins
+                Verhältnis – und gewinnen Sie so ein klareres Bild.
               </p>
             </li>
             <li class="step">
