--- a/datenschutz.html
+++ b/datenschutz.html
@@ -45,7 +45,7 @@
         <p class="datenschutz-text">
           Verantwortlicher im Sinne der Datenschutzgesetze ist:
           <br /><strong>factico.</strong><br />
-          <a href="https://www.factico.eu" target="_blank">www.factico.eu</a>
+          <a href="https://www.factico.eu" target="_blank">www.factico.eu</a><br />
           Andreas Siade<br />
           Adolf-Baeyer-Damm 8<br />
           81735 München<br />
