--- a/cducsu.html
+++ b/cducsu.html
@@ -230,7 +230,7 @@
            <strong>22. Januar 2025: Messerattacke in Aschaffenburg:</strong> Ein 28-jähriger Afghane greift eine Kindergruppe an, ein zweijähriger Junge und ein Mann,der helfen wollte, werden tödlich verletzt. 
            </li>
              <li>
-           <strong>13. Februar 2025:</strong> <strong>Anschlag in München:</strong>  Ein 24 Jahre alter Afghane, dessen Asylantrag abgelehnt wurde, rast in eine Gruppe von Demonstranten.
+           <strong>13. Februar 2025:</strong> <strong>Anschlag in München:</strong>  Ein 24 Jahre alter Afghane, dessen Asylantrag abgelehnt wurde, rast in eine Gruppe von Demonstranten. Ein schwerverletztes Kind (2) und die Mutter (37) wurden dabei ermordet.
            </li>
            </ul>
                      </div>
@@ -431,16 +431,16 @@
 
         <div class="collapsible-content">
           <p class="party-highlight-description">
-            Das von der <strong>CSU</strong> unter <strong>Alexander Dobrindt</strong> initiierte und von <strong>Andreas Scheuer</strong> weitergeführte Projekt der <strong>Pkw-Maut</strong> für ausländische Autofahrer ist zu einem
+            Das von der <strong>CSU</strong> unter <strong>Alexander Dobrindt</strong> initiierte und von <strong>Andreas Scheuer</strong> weitergeführte Projekt der <mark>Pkw-Maut</mark> für ausländische Autofahrer ist zu einem
             <strong>kostspieligen Desaster</strong> für die deutschen Steuerzahler geworden. Nachdem der <strong>Europäische Gerichtshof</strong> die Maut für rechtswidrig erklärte, muss der Bund nun
             <strong>243 Millionen Euro Schadenersatz</strong> an die Betreiberfirmen zahlen.
         </p>
         <p class="party-highlight-description">
-            Verkehrsminister <strong>Andreas Scheuer</strong> schloss 2018 Verträge zum Aufbau und Betrieb der Maut ab, noch bevor das Urteil des EuGH vorlag. Diese Verträge wurden nach dem Urteil gekündigt, was zu den hohen Schadenersatzforderungen führte. Ursprünglich forderten die Unternehmen sogar <strong>560 Millionen Euro</strong>.
+            Verkehrsminister <strong>Andreas Scheuer</strong> schloss 2018 Verträge zum Aufbau und Betrieb der Maut ab, noch bevor das Urteil des EuGH vorlag. Diese Verträge wurden nach dem Urteil gekündigt, was zu den hohen Schadenersatzforderungen führte. Ursprünglich forderten die Unternehmen sogar <mark>560 Millionen Euro</mark>.
         </p>
         <p class="party-highlight-description">
-            Kritiker warfen der <strong>CSU</strong> vor, mit der Pkw-Maut <mark>populistische Politik</mark> zu betreiben und die <mark>europäische Zusammenarbeit zu missachten</mark>. Das Scheitern des Projekts und die hohen Kosten werden als
-            <mark>peinliche Niederlage für die CSU</mark> und als Beispiel für <mark>politisches Fehlmanagement</mark> gewertet. Die Opposition kritisiert insbesondere das Verhalten von <strong>Andreas Scheuer</strong>, der die Verträge übereilt und ohne ausreichende Absicherung abgeschlossen haben soll.
+            Kritiker warfen der <strong>CSU</strong> vor, mit der Pkw-Maut <mark>populistische Politik</mark> zu betreiben und die <strong>europäische Zusammenarbeit zu missachten</strong>. Das Scheitern des Projekts und die hohen Kosten werden als
+            <mark>peinliche Niederlage für die CSU</mark> und als Beispiel für <strong>politisches Fehlmanagement</strong> gewertet. Die Opposition kritisiert insbesondere das Verhalten von <strong>Andreas Scheuer</strong>, der die Verträge übereilt und ohne ausreichende Absicherung abgeschlossen haben soll.
         </p>
 
           <p class="party-highlight-date">
