--- a/spd.html
+++ b/spd.html
@@ -595,6 +595,9 @@
         <li class="party-member-item">
           <a href="esken.html">Saskia Esken</a>
         </li>
+        <li class="party-member-item">
+          <a href="faeser.html">Nancy Faeser</a>
+        </li>
         <li class="party-member-item">Karl Lauterbach</li>
       </ul>
     </section>
