--- a/scholz.html
+++ b/scholz.html
@@ -406,6 +406,9 @@
         <a href="klingbeil.html">Lars Klingbeil</a>
       </li>
             <li class="party-member-item">
+        <a href="faeser.html">Nancy Faeser</a>
+      </li>
+            <li class="party-member-item">
         <a href="esken.html">Saskia Esken</a>
       </li>   
       <li class="party-member-item">Karl Lauterbach</li>
