--- a/klingbeil.html
+++ b/klingbeil.html
@@ -132,6 +132,9 @@
         <a href="scholz.html">Olaf Scholz</a>
       </li>
             <li class="party-member-item">
+        <a href="faeser.html">Nancy Faeser</a>
+      </li>
+            <li class="party-member-item">
         <a href="esken.html">Saskia Esken</a>
       </li>   
       <li class="party-member-item">Karl Lauterbach</li>
