--- a/faeser.html
+++ b/faeser.html
@@ -86,18 +86,27 @@
           </p>
 
           <h3>Highlights</h3>
-          <p>
-            Faeser fiel wiederholt durch fragwürdige Entscheidungen und Äußerungen auf: 
-            Ihre Besetzung des BfV-Chefpostens sorgte für heftige Kritik, ihr Umgang mit 
-            Clan-Kriminalität wurde als zu lasch bewertet, und ihre Position zur Migrationspolitik 
-            löste Debatten über innere Sicherheit aus. Während der Flutkatastrophe 2023 
-            konzentrierte sie sich vorrangig auf ihren NRW-Wahlkampf – mit überschaubarem Erfolg. 
-            Dafür setzt sie sich mit voller Überzeugung im Kampf gegen Rechts ein, demonstriert 
-            regelmäßig die richtige Haltung für Vielfalt und Offenheit und verschafft Deutschland 
-            weltweit Aufmerksamkeit – sei es mit einer Regenbogenbinde in Katar oder durch ihre 
-            Teilnahme an Demos mit Polizei-Gegnern. Migration und innere Sicherheit scheinen 
-            hingegen nicht ganz oben auf ihrer Prioritätenliste zu stehen.
-          </p> 
+<p>
+  Faeser fiel wiederholt durch fragwürdige Entscheidungen und Äußerungen auf:  
+  Ihre Besetzung des BfV-Chefpostens sorgte für heftige Kritik, ihr Umgang mit  
+  Clan-Kriminalität wurde als zu lasch bewertet, und ihre Position zur  
+  Migrationspolitik löste Debatten über innere Sicherheit aus.  
+</p>  
+
+<p>
+  Während der Flutkatastrophe 2023 konzentrierte sie sich vorrangig auf  
+  ihren NRW-Wahlkampf – mit überschaubarem Erfolg. Dafür setzt sie sich  
+  mit voller Überzeugung im Kampf gegen Rechts ein, demonstriert regelmäßig  
+  die richtige Haltung für Vielfalt und Offenheit und verschafft Deutschland  
+  weltweit Aufmerksamkeit – sei es mit einer Regenbogenbinde in Katar oder  
+  durch ihre Teilnahme an Demos mit Polizei-Gegnern.  
+</p>  
+
+<p>
+  Migration und innere Sicherheit scheinen hingegen nicht ganz oben auf  
+  ihrer Prioritätenliste zu stehen.  
+</p>
+
         </div>         
 
         <img
