--- a/faeser.html
+++ b/faeser.html
@@ -242,7 +242,7 @@
             <iframe
               width="560"
               height="315"
-              src="src="https://www.youtube.com/embed/ZnV5td6qX8E?si=ILBEHmhE8VUthJgB" "
+              src="https://www.youtube.com/embed/ZnV5td6qX8E?si=ILBEHmhE8VUthJgB"
               title="CSD Frankfurt 2023 mit Nancy Faeser"
               frameborder="0"
               allowfullscreen
