--- a/weidel.html
+++ b/weidel.html
@@ -76,7 +76,7 @@
   
     <div class="highlight-skandal-scale">
       <h4>Kopftuch-Krampf: 4/10 🧕🧕🧕🧕⚪⚪⚪⚪⚪⚪</h4>
-      <p class="highlight-description">Weidels umstrittene Bemerkung über Kopftuch tragende Frauen führte zu einem Ordnungsruf im Bundestag und löste Empörung aus. Ihre Wortwahl wurde weitgehend als diskriminierend und pauschalisierend wahrgenommen.</p>  
+      <p class="highlight-description">Weidels umstrittene Bemerkung über Kopftuch tragende Frauen führte zu einem Ordnungsruf im Bundesta.</p>  
     </div>
   
     <div class="gradient-bar-container">
