--- a/habeck.html
+++ b/habeck.html
@@ -115,6 +115,7 @@
         />
       </div>
     </section>
+    
     <!-- Highlights Section -->
     <section class="party-highlights">
       <h2 class="party-section-title">Skandale und Kontroversen</h2>
@@ -247,8 +248,25 @@
             </div>
         </div>
     </div>
-
     </section>
+
+    <!-- Extra-Section -->
+<section class="party-highlights">
+  <h2 class="party-section-title">Baerbocks Rhetoriktalente</h2>
+
+  <p class="party-highlight-description">
+    Hier ein kleiner aber dennoch gut gelungener Zusammenschnitt von ein paar wenigen Habeck-Highlights:</p>
+  <div class="video-container">
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/UWb-gffg79o?si=VV5MYcMoMBbcdWOy" 
+        title="Deutschland atmet auf nach dem Aus des grünen Wirtschaftsministers"
+        frameborder="0"
+        allowfullscreen
+      ></iframe>
+  </div>
+</section>
 
     <section class="party-members">
     <h2 class="party-section-title">Weitere Mitglieder</h2>
