--- a/habeck.html
+++ b/habeck.html
@@ -252,10 +252,10 @@
 
     <!-- Extra-Section -->
 <section class="party-highlights">
-  <h2 class="party-section-title">Baerbocks Rhetoriktalente</h2>
+  <h2 class="party-section-title">Habeck-Highlights</h2>
 
   <p class="party-highlight-description">
-    Hier ein kleiner aber dennoch gut gelungener Zusammenschnitt von ein paar wenigen Habeck-Highlights:</p>
+    Hier ein kleiner aber dennoch gut gelungener Zusammenschnitt von ein paar wenigen interessanten Aussagen.</p>
   <div class="video-container">
       <iframe
         width="560"
